src/test/deca/context/invalid/testThisOutsideClass.deca
// Desciption : Utilisation de this dans le main
{
    this.a = 2;
}
